Actions
Bug #20647
closedInvalid return in class/module body from within singleton class
Bug #20647:
Invalid return in class/module body from within singleton class
Actions
Added by kddnewton (Kevin Newton) about 2 years ago. Updated about 2 years ago.
That’s actually interesting, because return in the middle of the class body, while might be considered questionable, is also meaningful.
I think making it a syntax error in normal classes was (probably?) a decision from before 2.4 (when top-level return had no useful semantics).
I can imagine code like
class MyService
# some generic stuff
return if RUBY_PLATFORM.match?(/windows/i)
# some Unix-only stuff
end
...and even more so, the same in the middle of a singleton class definition in some DSL method :shrug:
Applied in changeset git|e642ddf7ae86e306674559ae745823fdbf56ea10.
[Bug #20647] Disallow return directly within a singleton class