[Bug #20647] Disallow `return` directly within a singleton class